--- a/obsidian_vault/data/03. 🌱Ваши заметки/Новости/13.01.2025 Релиз 🎊.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/Новости/13.01.2025 Релиз 🎊.md
@@ -45,8 +45,8 @@ ___
  > Получилось представить? Ждём твой ролик :E
 ___
 
-## Группа Rocket.Chat
-Всем заинтересованным в проекте можно обращаться в [Rocket.Chat](https://rocketchat-student.21-school.ru/channel/noemix-21).
+## Связь
+Вопросы, идеи, обсуждения, новости здесь → [Discussions](https://github.com/vgy789/noemix21/discussions/categories/announcements).
 
 ## Timeline и заметки при работе над `noemix 21`
 Под конец Timeline стал подробнее расписан. Это так, потому что начал его писать под конец разработки. 😅
@@ -56,7 +56,6 @@ ___
 > Я бы сказал что в январе сформировалось видение того как база знаний будет работать внутри Obsidian, а образ в виде сайта развился в январе.
 
 %%
-```mermaid
 timeline
 
 title Timeline работы над noemix 21.
@@ -193,12 +192,21 @@ section Enveloppe + Quartz.
 
         : Теперь списки могут отображаться колонками!
 
-    12:
+    12: Отладка и исправление контента.
 
-        : Отладка.
+        : Не удалось решить спецефическую проблему касаемо отображения таблицы без контента. GPT оказались бессильными.
 
-        : Не удалось решить спецефическую проблему касаемой отображения таблицы без контента. GPT оказались бессильными.
+        : Почти всё готово к релизу, осталось придумать в каком виде публиковать.
 
-        : В ожидании когда проект в Школьном репозитории сделают полупубличным. Как только, так сразу сделаю релиз и опубликую.
-```
+    13: Написал чтобы сделали репозиторий в Школьном GitLab видимым для остальных участинков. Мне порекомендовали запушить, в другой проект NSK Knowledge Base т.к. там видимость настроена.
+
+        : Для меня это не подходит. Выбирал Школьный из-за того, что пирам будет проще взаимодействовать внутри репозитория, да и  Школьные никнеймы видны. Из-за закрытости от внешнего и «неповоротливости» Школьный GitLab не подходит.  
+
+        : Можно опубликовать Obsidian контент как отдельный репозиторий. В размышлениях над использованием git submodules и subtree.
+
+        : Эти техники могут добавить трудности и хлопоты при работе сообществом. Всё-же, сделаю монорепозиторий, только с Quartz subtree.
+
+        : Решил выбрать GitHub для репозитория. Мне нравится GitLab своим CI/CD возможностями, но CI/CD делать я не планирую. Да и, кажется, GitLab подходит больше для корпоративной среды.
+
+        : Всё готово к релизу.
 %%
