--- a/obsidian_vault/data/Внести вклад.md
+++ b/obsidian_vault/data/Внести вклад.md
@@ -8,9 +8,7 @@ banner:
 
 ## Как предложить идею? 💡
 Если у тебя есть какие-либо идеи по ведению базы знаний или хочешь что-то обсудить: 
-- Воспользоваться специальным функционалом GitLab и создать [[Ваши Ваши заметкиssue и как его создать в gitlab|Issue]]. 
-	Я буду счастлив если ты предпочтёшь этот вариант и разберёшься в этом :-)
-- Написать в [Rocket.Chat](https://rocketchat-student.21-school.ru/channel/noemix-21)
+- Написать в [GitHub Discussions](https://github.com/vgy789/noemix21/discussions/)
 
 ## Как написать заметку/статью?
 Абсолютно все страницы на этом сайте написаны в формате `Markdown`. 
@@ -20,7 +18,7 @@ banner:
 
 ## Как отправить заметку/статью?
 - Воспользоваться специальным функционалом GitHub и выполнить Merge Request `^_^`
-- Написать в [Rocket.Chat](https://rocketchat-student.21-school.ru/channel/noemix-21)
+- Отправить заметку в [Rocket.Chat группу](https://rocketchat-student.21-school.ru/channel/noemix-21)
 
 ## При использовании GitHub:
 1. сделай fork проекта
