--- a/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. matrix+ от scrimgeo.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. matrix+ от scrimgeo.md
@@ -8,7 +8,7 @@ tags:
 project: "[[CPP1 s21_matrix+]]"
 s21-authors:
   - "[[scrimgeo]]"
-branch: "[[C++ (CPP)]]"
+branch: "[[CPP]]"
 source: https://21-school-by-students.notion.site/Matrix-92fb0725a8444b65a8695fc637cddba3
 ---
 
