--- a/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. лекция по containers 3.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. лекция по containers 3.md
@@ -8,7 +8,7 @@ tags:
 project: "[[CPP2 s21_containers]]"
 s21-authors:
   - "[[elenemar]]"
-branch: "[[C++ (CPP)]]"
+branch: "[[CPP]]"
 source: https://held-stingray-d76.notion.site/C-d491bee014b34651a8e7b93f6be2631c
 ---
 
