--- a/obsidian_vault/data/Лицензия.md
+++ b/obsidian_vault/data/Лицензия.md
@@ -5,7 +5,9 @@ banner:
 
 Содержимое, опубликованное на этом сайте, образует «базу знаний noemix 21».
 
-«база знаний noemix 21» находится под лицензией [Creative Commons Attribution 4.0 International](https://creativecommons.org/licenses/by/4.0/) .
+«база знаний noemix 21» находится под лицензией [Creative Commons Attribution 4.0 International](https://creativecommons.org/licenses/by/4.0/), за исключением материалов Школы 21. Авторство Школы 21 указано в соответствующих документах в виде ссылки на источник информации.
+
+Лицензия CC BY предполагает что
 
 Вы можете свободно:
 -  **Делиться (обмениваться)** — копировать и распространять материал на любом носителе и в любом формате 
