--- a/obsidian_vault/data/01. 🏕️Кампусы/Новосибирск.md
+++ b/obsidian_vault/data/01. 🏕️Кампусы/Новосибирск.md
@@ -6,10 +6,14 @@ banner:
 ---
 
 ## [[data/99. 🗃️Картотека/Клубы/Новосибирск/Новосибирск|Клубы]]
+```dataview
+LIST
+FROM "data/99. 🗃️Картотека/Клубы/Новосибирск"
+WHERE !contains(tags, "index")
+SORT file.name
+```
 
-
-## ADM 
-**[[nsk_cmd.jpg|График работы CMD|350]]**
+## График работы ADM 
 - **Как обычно:** 
 	10:00 - 19:00 (ПН-ПТ)
 - **Забрать мерч можно:**
@@ -25,3 +29,6 @@ banner:
 
 > Если нас нет на месте, пиши в личку в рокетчат.
 > Также возможны замены АДМ.
+
+[[nsk_cmd.jpg| тут график на картинке]]
+
