--- a/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. matrixPlus от scrimgeo.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. matrixPlus от scrimgeo.md
@@ -5,7 +5,7 @@ tags:
   - note
   - nsk
   - video/lecture
-project: "[[CPP1 s21_matrix+]]"
+project: "[[data/99. 🗃️Картотека/Все проекты/CPP/CPP1 s21_matrix+]]"
 s21-authors:
   - "[[scrimgeo]]"
 branch: "[[CPP]]"
