--- a/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. smartcalc v2 0.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. smartcalc v2 0.md
@@ -5,7 +5,7 @@ tags:
   - note
   - nsk
   - video/lecture
-project: "[[SmartCalc_v2.0]]"
+project: "[[data/99. 🗃️Картотека/Все проекты/CPP/SmartCalc_v2.0]]"
 s21-authors: []
 branch: "[[CPP]]"
 source: https://held-stingray-d76.notion.site/C-d491bee014b34651a8e7b93f6be2631c
