--- a/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. лекция по containers 3.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. лекция по containers 3.md
@@ -5,7 +5,7 @@ tags:
   - note
   - nsk
   - video/lecture
-project: "[[CPP2 s21_containers]]"
+project: "[[data/99. 🗃️Картотека/Все проекты/CPP/CPP2 s21_containers]]"
 s21-authors:
   - "[[elenemar]]"
 branch: "[[CPP]]"
