--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Спортивный клуб.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Спортивный клуб.md
@@ -10,9 +10,9 @@ s21-leader:
 ---
 
 Клуб по направлениям:
-1. [[data/99. 🗃️Картотека/Клубы/Новосибирск/Баскетбол]]
-2. [[data/99. 🗃️Картотека/Клубы/Новосибирск/Бег и ходьба]]
+1. [[data/99. 🗃️Картотека/Клубы/Новосибирск/Баскетбол|Баскетбол]]
+2. [[data/99. 🗃️Картотека/Клубы/Новосибирск/Бег и ходьба|Бег и ходьба]]
 3. [[data/data/99. 🗃️Картотека/Клубы/Новосибирск/Волейбол|Волейбол]]
-4. [[data/99. 🗃️Картотека/Клубы/Новосибирск/Йога и пилатес]]
-5. [[data/99. 🗃️Картотека/Клубы/Новосибирск/Настольный теннис]]
+4. [[data/99. 🗃️Картотека/Клубы/Новосибирск/Йога и пилатес|Йога и пилатес]]
+5. [[data/99. 🗃️Картотека/Клубы/Новосибирск/Настольный теннис|Настольный теннис]]
 6. [[data/data/99. 🗃️Картотека/Клубы/Новосибирск/Футбол|Футбол]]
