--- a/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. лекция по проекту mlp.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. лекция по проекту mlp.md
@@ -5,7 +5,7 @@ tags:
   - note
   - nsk
   - video/lecture
-project: "[[CPP7 MLP]]"
+project: "[[data/99. 🗃️Картотека/Все проекты/CPP/CPP7 MLP]]"
 s21-authors: []
 branch: "[[CPP]]"
 source: https://held-stingray-d76.notion.site/C-d491bee014b34651a8e7b93f6be2631c
