--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Футбол.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Футбол.md
@@ -4,9 +4,9 @@ banner:
 tags:
   - club
 topic: "[[data/99. 🗃️Картотека/Клубы/Новосибирск/Спортивный клуб]]"
-social-link: 
+social-link: https://t.me/+-e33NjLFP9w5MTM6
 city: "[[data/01. 🏕️Кампусы/Новосибирск]]"
 s21-leader:
   - "[[constanc]]"
-tg-leader: 
+tg-leader:
 ---
