--- a/obsidian_vault/data/01. 🏕️Кампусы/Новосибирск.md
+++ b/obsidian_vault/data/01. 🏕️Кампусы/Новосибирск.md
@@ -21,11 +21,11 @@ SORT file.name
 	17:00 - 19:00
 
 **Расписание дежурств в CMD:**
-	Понедельник - Катя
-	Вторник - Виолетта
-	Среда - Аня
-	Четверг - Лиля
-	Пятница - Ксюша
+> Понедельник - Катя
+> Вторник - Виолетта
+> Среда - Аня
+> Четверг - Лиля
+> Пятница - Ксюша
 
 > Если нас нет на месте, пиши в личку в рокетчат.
 > Также возможны замены АДМ.
