--- a/obsidian_vault/data/03. 🌱Ваши заметки/03. 🌱Ваши заметки.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/03. 🌱Ваши заметки.md
@@ -10,17 +10,17 @@ dg-hide-in-graph: true
 > s21-authors, date
 > FROM #note
 > WHERE 
-> 	contains(file.folder, this.file.folder)
+> 	file.folder = this.file.folder
 > SORT date DESC
 > ```
 
-> [!note]+ Прочие заметки
+> [!note]+ Прочие заметки (без привязки)
 >  ```dataview
 > TABLE
 > s21-authors, date
 > FROM #note
 > WHERE 
-> 	contains(file.folder, this.file.folder)
+> 	file.folder = this.file.folder
 > 	AND length(branch) = 0 AND length(project) = 0
 > SORT date DESC
 > ```
