--- a/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. matrixPlus от scrimgeo.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. matrixPlus от scrimgeo.md
@@ -5,10 +5,10 @@ tags:
   - note
   - nsk
   - video/lecture
-project: "[[data/99. 🗃️Картотека/Все проекты/CPP/CPP1 s21_matrix+]]"
+project: "[[data/99. 🗃️Картотека/Все проекты/C++/CPP1 s21_matrix+]]"
 s21-authors:
   - "[[scrimgeo]]"
-branch: "[[CPP]]"
+branch: "[[C++]]"
 source: https://21-school-by-students.notion.site/Matrix-92fb0725a8444b65a8695fc637cddba3
 ---
 
