--- a/obsidian_vault/data/04. 🪴Ваши статьи/04. 🪴Ваши статьи.md
+++ b/obsidian_vault/data/04. 🪴Ваши статьи/04. 🪴Ваши статьи.md
@@ -8,7 +8,7 @@ dg-hide-in-graph: true
 TABLE
 s21-authors, date
 WHERE 
-	contains(file.folder, this.file.folder) AND
+	file.folder = this.file.folder AND
 	contains(tags, "article")
 SORT date DESC
 ```
