--- a/obsidian_vault/data/_assets/_templates/Индекс проекта.md
+++ b/obsidian_vault/data/_assets/_templates/Индекс проекта.md
@@ -9,7 +9,7 @@ TABLE WITHOUT ID
 	file.link AS "Название проекта",
 	cluster AS "Ветка"
 WHERE 
-	contains(file.folder, this.file.folder) 
+	file.folder = this.file.folder 
 	AND !contains(tags, "index")
 SORT Город ASC, file.name ASC
 ```
