--- a/obsidian_vault/data/О проекте.md
+++ b/obsidian_vault/data/О проекте.md
@@ -12,7 +12,7 @@ banner:
 - Сайты Школы edu и applicant.
 
 ### Что это
-Не просто сборник лекции, статей, гайдов, ссылок на полезные материалы и чаты сообщества.
+**Не просто** сборник лекции, статей, гайдов, ссылок на полезные материалы и чаты сообщества.
 
 ### Технические детали
-Сайт был создан с использованием [Obsidian](https://obsidian.md/) и плагина [Webpage HTML Export](https://github.com/KosmosisDire/obsidian-webpage-export).
+Сайт был создан с использованием [Obsidian](https://obsidian.md/), статических генератор сайтов [Quartz](https://quartz.jzhao.xyz/) и плагина [Envoloppe](https://github.com/Enveloppe). Подробнее в репозитории в файлах [README.md](https://github.com/vgy789/noemix21/blob/main/README.md).
