--- a/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. лекция jcraster по собственной реализации sscanf на c.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. лекция jcraster по собственной реализации sscanf на c.md
@@ -5,7 +5,7 @@ tags:
   - note
   - nsk
   - video/lecture
-project: "[[C3 s21_string➕]]"
+project: "[[C3 s21_string+]]"
 s21-authors:
   - "[[jcraster]]"
 branch: "[[C]]"
