--- a/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. лекция по containers 1.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. лекция по containers 1.md
@@ -5,9 +5,9 @@ tags:
   - note
   - nsk
   - video/lecture
-project: "[[data/99. 🗃️Картотека/Все проекты/CPP/CPP2 s21_containers]]"
+project: "[[data/99. 🗃️Картотека/Все проекты/C++/CPP2 s21_containers]]"
 s21-authors: []
-branch: "[[CPP]]"
+branch: "[[C++]]"
 source: https://held-stingray-d76.notion.site/C-d491bee014b34651a8e7b93f6be2631c
 ---
 
