--- a/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. ошибки в реализации sprintf. работа со статической памятью. замена fcvt.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/Видео/видео. ошибки в реализации sprintf. работа со статической памятью. замена fcvt.md
@@ -5,7 +5,7 @@ tags:
   - note
   - nsk
   - video/lecture
-project: "[[C3 s21_string➕]]"
+project: "[[C3 s21_string+]]"
 s21-authors: []
 branch: "[[C]]"
 source: https://21-school-by-students.notion.site/56c07d652aa64162a02913ad1d83f9aa
