--- a/obsidian_vault/data/03. 🌱Ваши заметки/03. 🌱Ваши заметки.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/03. 🌱Ваши заметки.md
@@ -10,7 +10,7 @@ dg-hide-in-graph: true
 > s21-authors, date
 > FROM #note
 > WHERE 
-> 	file.folder = this.file.folder
+> 	contains(file.path, this.file.folder) AND contains(file.path, "/data")
 > SORT date DESC
 > ```
 
