расписания дежурств бегущей строкой

--- a/obsidian_vault/data/01. 🏕️Кампусы/Новосибирск.md
+++ b/obsidian_vault/data/01. 🏕️Кампусы/Новосибирск.md
@@ -21,14 +21,10 @@ SORT file.name
 	17:00 - 19:00
 
 **Расписание дежурств в CMD:**
-> Понедельник - Катя
-> Вторник - Виолетта
-> Среда - Аня
-> Четверг - Лиля
-> Пятница - Ксюша
+<marquee class="sampleMarquee" direction="left" scrollamount="18" behavior="scroll">Понедельник - Катя | Вторник - Виолетта | Среда - Аня | Четверг - Лиля | Пятница - Ксюша</marquee>
 
 > Если нас нет на месте, пиши в личку в рокетчат.
 > Также возможны замены АДМ.
 
-[[nsk_cmd.jpg| тут график на картинке]]
+[[nsk_cmd.jpg|полный график на картинке]]
 
