Отображение как Клубы «Города», а не «Город»

--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Белгород/Белгород.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Белгород/Белгород.md
@@ -7,6 +7,7 @@ tags:
 source: https://applicant.21-school.ru/contacts
 city: "[[data/01. 🏕️Кампусы/Белгород]]"
 dg-hide-in-graph: true
+title: Клубы Белгорода
 ---
 
 Клубов много не бывает! **Если хочешь зарегистрировать свой клуб в белгородском кампусе:** 
