--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Великий Новгород/Великий Новгород.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Великий Новгород/Великий Новгород.md
@@ -7,6 +7,7 @@ tags:
 source: https://applicant.21-school.ru/contacts
 city: "[[data/01. 🏕️Кампусы/Великий Новгород]]"
 dg-hide-in-graph: true
+title: Клубы Великого Новгорода
 ---
 
 Лид клубов – Настя АДМ
