--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Москва/Москва.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Москва/Москва.md
@@ -7,6 +7,7 @@ tags:
 source: https://applicant.21-school.ru/contacts
 city: "[[data/01. 🏕️Кампусы/Москва]]"
 dg-hide-in-graph: true
+title: Клубы Москвы
 ---
 
 Лид московских клубов – Катя АДМ - @e.kruglova (RocketChat)  
