--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Новосибирск.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Новосибирск.md
@@ -5,6 +5,7 @@ tags:
   - index
 source: https://applicant.21-school.ru/contacts
 city: "[[data/01. 🏕️Кампусы/Новосибирск]]"
+title: Клубы Новосибирска
 ---
 
 Как создать клуб в Новосибирске: [Заполни форму](https://forms.yandex.ru/u/675c39e3e010db53430ab6d9/) и Лиля напишет тебе. 💫 
