--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Сургут/Сургут.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Сургут/Сургут.md
@@ -6,6 +6,7 @@ tags:
   - index
 source: https://applicant.21-school.ru/contacts
 city: "[[data/01. 🏕️Кампусы/Сургут]]"
+title: Клубы Сургута
 ---
 
 Лид клубов – Сергей Ионов
