--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Ярославль/Ярославль.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Ярославль/Ярославль.md
@@ -6,7 +6,7 @@ tags:
   - index
 source: https://applicant.21-school.ru/contacts
 city: "[[data/01. 🏕️Кампусы/Ярославль]]"
-dg-hide-in-graph: true
+title: Клубы Ярославля
 ---
 
 Как создать клуб в Ярославле: `¯\_(ツ)_/¯` Спроси у ADM и напиши сюда ПАЖАЛУСТА
