fix: удалить неработающие ссылки

--- a/obsidian_vault/data/Статистика базы.md
+++ b/obsidian_vault/data/Статистика базы.md
@@ -25,8 +25,8 @@ const projects = allFiles.filter(page => {
 });
 const totalFiles = allFiles.length;
 dv.paragraph(
-`- [[03. Ваши заметки|Заметок]]: ${notes.length}
-- [[Ваши клубы|Клубов]]: ${clubs.length}
+`- Заметок: ${notes.length}
+- Клубов: ${clubs.length}
 - Проектов: ${projects.length}
 - Файлов: ${totalFiles}`);
 ```
