--- a/obsidian_vault/data/01. 🏕️Кампусы/Новосибирск.md
+++ b/obsidian_vault/data/01. 🏕️Кампусы/Новосибирск.md
@@ -5,6 +5,17 @@ cssclasses:
 banner: 
 ---
 
+> [!info] Новости кампуса:
+> ```dataview
+> TABLE WITHOUT ID
+> 	file.link AS "Событие", 
+> 	date AS "Опубликовано"
+> FROM "data/03. 🌱Ваши заметки/Новости"
+> WHERE share = true AND contains(tags, "news/nsk")
+> SORT date DESC
+> LIMIT 4
+> ```
+
 ## [[data/99. 🗃️Картотека/Клубы/Новосибирск/Новосибирск|Клубы]]
 ```dataview
 LIST
@@ -15,15 +26,16 @@ SORT file.name
 
 ## График работы ADM 
 - **Как обычно:** 
-	10:00 - 19:00 (ПН-ПТ)
+	- 10:00 - 19:00 (ПН-ПТ)
 - **Забрать мерч можно:**
-	10:00 - 11:00
-	17:00 - 19:00
+	- 10:00 - 11:00
+	- 17:00 - 19:00
 
 **Расписание дежурств в CMD:**
-<marquee class="sampleMarquee" direction="left" scrollamount="18" behavior="scroll">Понедельник - Катя | Вторник - Виолетта | Среда - Аня | Четверг - Лиля | Пятница - Ксюша</marquee>
+<marquee class="sampleMarquee" direction="left" scrollamount="16" behavior="scroll">Понедельник - Катя | Вторник - Виолетта | Среда - Аня | Четверг - Лиля | Пятница - Ксюша</marquee>
 
 > Если нас нет на месте, пиши в личку в рокетчат.
+> 
 > Также возможны замены АДМ.
 
 [[nsk_cmd.jpg|полный график на картинке]]
