--- a/obsidian_vault/data/Внести вклад.md
+++ b/obsidian_vault/data/Внести вклад.md
@@ -17,8 +17,10 @@ banner:
 Но, как по мне, удобней взаимодействовать с базой знаний в бесплатной программе заметок [Obsidian](https://obsidian.md/). `noemix 21` была создана именно с использованием Obsidian.
 
 ## Как отправить заметку/статью?
+Выбирай:
 - Воспользоваться специальным функционалом GitHub и выполнить Merge Request `^_^`
 - Отправить заметку в [Rocket.Chat группу](https://rocketchat-student.21-school.ru/channel/noemix-21)
+- Написать мне [Telegram: Contact @vgy789](https://t.me/vgy789)
 
 ## При использовании GitHub:
 1. сделай fork проекта
