--- a/obsidian_vault/data/01. 🏕️Кампусы/Новосибирск.md
+++ b/obsidian_vault/data/01. 🏕️Кампусы/Новосибирск.md
@@ -3,6 +3,7 @@ share: true
 cssclasses:
   - dashboard
 banner: 
+description: 469 рабочих станций с компьютерами Apple, 3-х этажный кампус в небоскребе, 2 игровые комнаты, 9 образовательных кластеров
 ---
 
 > [!info] Новости кампуса:
