--- a/obsidian_vault/data/03. 🌱Ваши заметки/Новости/Генеральная уборка НСК 01.25.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/Новости/Генеральная уборка НСК 01.25.md
@@ -6,9 +6,9 @@ tags:
 source: https://rocketchat-student.21-school.ru/group/nsk_adm?msg=9Vjv3mNU15m7xDBbI
 ---
 
-# 🧹 **Генеральная уборка в кампусе!**
+## 🧹 **Генеральная уборка в кампусе!**
 
-## 📅 График уборки:
+### 📅 График уборки:
 
 - **18.01**  
   Уборка кластера **Clarity** (17 этаж), **Presense** (18 этаж) и **Silence** (20 этаж)
@@ -30,7 +30,7 @@ source: https://rocketchat-student.21-school.ru/group/nsk_adm?msg=9Vjv3mNU15m7xD
 
 ---
 
-### ⚠️ **УСПЕЙТЕ ЗАБРАТЬ СВОЮ ОБУВЬ И ПРОЧИЕ ВЕЩИ!**  
+#### ⚠️ **УСПЕЙТЕ ЗАБРАТЬ СВОЮ ОБУВЬ И ПРОЧИЕ ВЕЩИ!**  
 
 - Кухни ждет та же участь: забираем свою еду, чай, сахар, кофе и т.д.
 - **P.S.** Убирать, а не перемещать в переговорку/игровую/кластеры.
