--- a/obsidian_vault/data/03. 🌱Ваши заметки/канцелярия новосиба.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/канцелярия новосиба.md
@@ -8,6 +8,7 @@ topic: "[[data/01. 🏕️Кампусы/Новосибирск]]"
 s21-authors:
   - "[[jonnabin]]"
 source: я
+description: Результат отработки пенальти
 ---
 
 Ручки синие
