--- a/obsidian_vault/data/Внести вклад.md
+++ b/obsidian_vault/data/Внести вклад.md
@@ -1,6 +1,7 @@
 ---
 share: true
 banner: 
+description: Если у тебя есть какие-либо идеи по ведению базы знаний или хочешь что-то обсудить. А может быть ты хочешь написать статью?
 ---
 
 > [!success] 
