--- a/obsidian_vault/data/Лицензия.md
+++ b/obsidian_vault/data/Лицензия.md
@@ -1,6 +1,7 @@
 ---
 share: true
 banner: 
+description: «база знаний noemix 21» находится под лицензией Creative Commons Attribution 4.0 International, за исключением материалов Школы 21. Авторство Школы 21 указано в соответствующих документах в виде ссылки на источник информации.
 ---
 
 Содержимое, опубликованное на этом сайте, образует «базу знаний noemix 21».
