--- a/obsidian_vault/data/О проекте.md
+++ b/obsidian_vault/data/О проекте.md
@@ -1,6 +1,7 @@
 ---
 share: true
 banner: 
+description: Не просто сборник лекции, статей, гайдов, ссылок на полезные материалы и чаты сообщества. Эта база знаний была создана вашим пиром jonnabin.
 ---
 
 ## О проекте
