--- a/obsidian_vault/data/01. 🏕️Кампусы/Великий Новгород.md
+++ b/obsidian_vault/data/01. 🏕️Кампусы/Великий Новгород.md
@@ -3,6 +3,7 @@ share: true
 cssclasses:
   - dashboard
 banner: 
+description: Этот раздел нуждается в героях.Добавьте сюда что-нибудь. 🥺
 ---
 
 > [!caution] Внимание!
