--- a/obsidian_vault/data/03. 🌱Ваши заметки/Новости/Генеральная уборка НСК 01.25.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/Новости/Генеральная уборка НСК 01.25.md
@@ -3,6 +3,8 @@ share: true
 date: 2025-01-14
 tags:
   - news/nsk
+s21-authors:
+  - "[[jonnabin]]"
 source: https://rocketchat-student.21-school.ru/group/nsk_adm?msg=9Vjv3mNU15m7xDBbI
 ---
 
