--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Музыкальный.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Музыкальный.md
@@ -4,8 +4,9 @@ banner:
 tags:
   - club
 social-link: https://t.me/+Y3pPDuP2V-UwZDBi
+title: 🎵 Музыкальный клуб – Новосибирск
 city: "[[data/01. 🏕️Кампусы/Новосибирск]]"
-s21-leader: []
+s21-leader: 
 ---
 
 Хочешь чего-то сюда добавить? ништяяк :))
