--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Настольные игры.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Настольные игры.md
@@ -4,8 +4,9 @@ banner:
 tags:
   - club
 social-link: https://t.me/+QHrxtUanPD02MTg6
+title: 🀄 Настольные игры – Новосибирск
 city: "[[data/01. 🏕️Кампусы/Новосибирск]]"
-s21-leader: []
+s21-leader: 
 ---
 
 Хочешь чего-то сюда добавить? ну давай :))
