--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Спортивный клуб.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Спортивный клуб.md
@@ -4,6 +4,7 @@ banner: "[[sport-club-nsk-logo.jpg]]"
 tags:
   - club
 social-link: https://t.me/+-e33NjLFP9w5MTM6
+title: 🏅 Спортивный клуб – Новосибирск
 city: "[[data/01. 🏕️Кампусы/Новосибирск]]"
 s21-leader:
   - "[[electroe]]"
