--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Чайные церемонии.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Чайные церемонии.md
@@ -4,9 +4,10 @@ banner:
 tags:
   - club
 social-link: https://t.me/+46yAvMazCGRhMmRi
+title: 🫖 Чайные церемонии – Новосибирск
 city: "[[data/01. 🏕️Кампусы/Новосибирск]]"
-s21-leader: []
+s21-leader: 
 ---
 
-Хочешь чего-то сюда добавить? ништяяк :))
+Хочешь чего-то сюда добавить? крууть :))
 [[data/Внести вклад]]
