--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Английский язык.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Английский язык.md
@@ -4,8 +4,9 @@ banner:
 tags:
   - club
 social-link: https://t.me/+DezeR3ea0rgzNDYy
+title: Клуб английского языка – Новосибирск
 city: "[[data/01. 🏕️Кампусы/Новосибирск]]"
-s21-leader: []
+s21-leader: 
 ---
 
 Хочешь чего-то сюда добавить? ну давай :))
