--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Баскетбол.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Баскетбол.md
@@ -5,8 +5,8 @@ tags:
   - club
 topic: "[[data/99. 🗃️Картотека/Клубы/Новосибирск/Спортивный клуб]]"
 social-link: https://t.me/+-e33NjLFP9w5MTM6
+title: 🏀 Баскетбольный клуб – Новосибирск
 city: "[[data/01. 🏕️Кампусы/Новосибирск]]"
 s21-leader:
   - "[[bullroag]]"
-tg-leader: 
 ---
