--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Разговорный английский.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Разговорный английский.md
@@ -4,8 +4,9 @@ banner:
 tags:
   - club
 social-link: https://t.me/s21_speaking_club
+title: Разговорный английский – Новосибирск
 city: "[[data/01. 🏕️Кампусы/Новосибирск]]"
-s21-leader: []
+s21-leader: 
 ---
 
 Хочешь чего-то сюда добавить? ну давай :))
