--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Туристический.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Туристический.md
@@ -4,8 +4,9 @@ banner:
 tags:
   - club
 social-link: https://t.me/+Bb-8LJtv-adlOGNi
+title: 👣 Туристический клуб – Новосибирск
 city: "[[data/01. 🏕️Кампусы/Новосибирск]]"
-s21-leader: []
+s21-leader: 
 ---
 
 Хочешь чего-то сюда добавить? ну давай :))
