--- a/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Футбол.md
+++ b/obsidian_vault/data/99. 🗃️Картотека/Клубы/Новосибирск/Футбол.md
@@ -5,8 +5,8 @@ tags:
   - club
 topic: "[[data/99. 🗃️Картотека/Клубы/Новосибирск/Спортивный клуб]]"
 social-link: https://t.me/+-e33NjLFP9w5MTM6
+title: ⚽ Футбольный клуб – Новосибирск
 city: "[[data/01. 🏕️Кампусы/Новосибирск]]"
 s21-leader:
   - "[[constanc]]"
-tg-leader: 
 ---
