--- a/obsidian_vault/data/03. 🌱Ваши заметки/Новости/Генеральная уборка НСК 01.25.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/Новости/Генеральная уборка НСК 01.25.md
@@ -6,6 +6,7 @@ tags:
 s21-authors:
   - "[[jonnabin]]"
 source: https://rocketchat-student.21-school.ru/group/nsk_adm?msg=9Vjv3mNU15m7xDBbI
+description: "18.01\r Уборка кластера Clarity (17 этаж), Presense (18 этаж) и Silence (20 этаж)\r\r 19.01 \rУборка кластера Tranquility (17 этаж), Genesis (18 этаж) и Infinity (20 этаж) \r\r20.01–21.01 \rУборка кластера Serenity (17 этаж), Existense (18 этаж) и Obscurity (20 этаж) \r\r22.01\r Уборка кухни на 17, 18 и 20 этажах \r\r23.01\r Уборка гардеробов на 17, 18 и 20 этажах \r\r24.01 \rУборка общих зон на 17, 18 и 20 этажах"
 ---
 
 ## 🧹 **Генеральная уборка в кампусе!**
