--- a/obsidian_vault/data/03. 🌱Ваши заметки/инструкция и шаблон резюме.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/инструкция и шаблон резюме.md
@@ -5,9 +5,9 @@ tags:
   - note
   - nsk
 project: 
-s21-authors: []
+s21-authors: 
 branch: 
-source: 
+source:
 ---
 
 Прекрасная новость - мы подготовили для вас инструкцию и шаблон резюме!
