--- a/obsidian_vault/data/03. 🌱Ваши заметки/как войти на экзамен.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/как войти на экзамен.md
@@ -10,6 +10,7 @@ s21-authors:
   - "[[nohemife]]"
 source: https://t.me/c/1975595161/116855/
 description: 
+title: Как войти на экзамен
 ---
 
 > [!quote] 
