--- a/obsidian_vault/data/03. 🌱Ваши заметки/книги московского кампуса.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/книги московского кампуса.md
@@ -5,8 +5,9 @@ tags:
   - msk
   - note
 topic: "[[data/01. 🏕️Кампусы/Москва]]"
-s21-authors: []
+s21-authors: 
 source: https://disk.yandex.ru/i/Z0cLFlC2P3qKxw
+title: Перечень книг Московского кампуса
 ---
 
 Кафка. Превращение	 		
