--- a/obsidian_vault/data/03. 🌱Ваши заметки/перечень канцелярии новосибирского кампуса.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/перечень канцелярии новосибирского кампуса.md
@@ -9,6 +9,7 @@ s21-authors:
   - "[[jonnabin]]"
 source: я
 description: Результат отработки пенальти
+title: Перечень канцелярии Новосибирского кампуса
 ---
 
 Ручки синие
