--- a/obsidian_vault/data/03. 🌱Ваши заметки/перечень книг новосибирского кампуса.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/перечень книг новосибирского кампуса.md
@@ -8,6 +8,7 @@ topic: "[[data/01. 🏕️Кампусы/Новосибирск]]"
 s21-authors:
   - "[[jonnabin]]"
 source: https://docs.google.com/spreadsheets/d/1RCYUQPrUGycoNaihpjUdvjxDCgxItEb6FViF7KQVnpA/
+title: Перечень книг Новосибирского кампуса
 ---
 
 Библиотека Сбербанка | Искусственный интеллект
