--- a/obsidian_vault/data/03. 🌱Ваши заметки/покрытие коды и тесты.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/покрытие коды и тесты.md
@@ -9,6 +9,7 @@ s21-authors:
   - "[[gcordell]]"
 branch: "[[C]]"
 source: https://held-stingray-d76.notion.site/e03e753a32bc4db5b34589e79093f1bf
+title: Покрытие кода и тесты
 ---
 
 ## Покрытие кода и тесты
