--- a/obsidian_vault/data/03. 🌱Ваши заметки/таблица значений математических операций.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/таблица значений математических операций.md
@@ -5,9 +5,10 @@ tags:
   - note
   - nsk
 project: "[[C5 s21_decimal]]"
-s21-authors: []
+s21-authors: 
 branch: "[[C]]"
 source: https://21-school-by-students.notion.site/8855fcc9c61846d892cd322d4d2c5f7b
+title: Таблица значений математических операций
 ---
 
 ## Таблица значений математических операций
