--- a/obsidian_vault/data/03. 🌱Ваши заметки/проблема с алгоритмом эллера.md
+++ b/obsidian_vault/data/03. 🌱Ваши заметки/проблема с алгоритмом эллера.md
@@ -9,6 +9,7 @@ s21-authors:
 branch: "[[Algorithms]]"
 source: https://held-stingray-d76.notion.site/Algorithms-05a5929d86d743ccb2b12fc9a92bcc3c
 description: Проблема с алгоритмом Эллера (создаются петли), описания которой нет ни в одном туториале.
+title: Проблема с алгоритмом Эллера
 ---
 
 Проблема с алгоритмом Эллера (создаются петли), описания которой нет ни в одном туториале.
