Добавлены проекты сообщества

--- a/obsidian_vault/data/Проекты сообщества.md
+++ b/obsidian_vault/data/Проекты сообщества.md
@@ -2,21 +2,21 @@
 share: true
 ---
 ## Активные
-> 1. `morty-smith-34-c` anwupp
-    > [TgBot](https://t.me/Morty34C_bot) · [GitHub](https://github.com/AnWuPP/morty-smith-34-c/issues)
-    > _Телеграм-бот для проверки новеньких в приватных чатах сообщества Школы 21._
+> 1. `morty-smith-34-c` – [[anwupp]] \
+    [TgBot](https://t.me/Morty34C_bot) · [GitHub](https://github.com/AnWuPP/morty-smith-34-c/issues) \
+    _Телеграм-бот для проверки новеньких в приватных чатах сообщества Школы 21._
 
-> 2. `Campus map bot` drveles zkhrg
-    > [TgBot](https://t.me/kzn_campus_map_bot) · [GitHub](https://github.com/drveles-X-zkhrg/campus_map_bot) 
-    > _С помощью этого бота можно узнать в кампусе ли студент и за каким рабочим местом находится.._
+> 2. `Campus map bot` – [[drveles]] [[zkhrg]] \
+    [TgBot](https://t.me/kzn_campus_map_bot) · [GitHub](https://github.com/drveles-X-zkhrg/campus_map_bot) \
+    _С помощью этого бота можно узнать в кампусе ли студент и за каким рабочим местом находится.._
 
-> 3. `devops-test` shiraleo
-    > [Online Test](https://alexwolf.ru/devops-test/) · [GitHub](https://github.com/AlexWoIf/devops-test)
-    > _Тест по DevOps экзамену._
+> 3. `devops-test` – [[shiraleo]] \
+    [Online Test](https://alexwolf.ru/devops-test/) · [GitHub](https://github.com/AlexWoIf/devops-test) \
+    _Тест по DevOps экзамену._
 
-> 4. `21 World (PeerStat)` fbeatris inigosto
-    > [21 World](https://21world.ru/map) · [GitHub](https://github.com/WindDemulTeam/PeerStat)  
-    > _Сервис статистики для студентов Школы 21._
+> 4. `21 World (PeerStat)` – [[fbeatris]] [[inigosto]] \
+    [21 World](https://21world.ru/map) · [GitHub](https://github.com/WindDemulTeam/PeerStat) \
+    _Сервис статистики для студентов Школы 21._
 
 ## Неактивные
 - `morfey21bot` — бот помощник для студентов Школы 21 в Новосибирске. [GitHub](https://github.com/awesomesk1ll/morfey21bot)
